--- a/Canvas.html
+++ b/Canvas.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   
 <script src="https://raw.github.com/dimaqw/host/master/canvas.js"></script>
